--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.90.20",
     "axios": "^1.13.4",
     "dotenv": "^17.2.3",
+    "hls.js": "^1.6.15",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
